--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&family=Dancing+Script&display=swap" rel="stylesheet">
     <link href="codingwebsites.css" rel="stylesheet">
+    <img src="large.png" alt="SuperCodez Logo" class="logo">
+
     <style>
          body {
             font-family: 'Inter', sans-serif;
@@ -70,3 +72,4 @@
 
 </body>
 </html>
+
