--- a/loginthroughsocial.html
+++ b/loginthroughsocial.html
@@ -51,6 +51,16 @@
 
     <div class="absolute top-1/3 left-0 w-80 h-16 shape-cylinder transform -rotate-45 -translate-x-1/2"></div>
     <div class="absolute bottom-1/3 right-0 w-60 h-12 shape-cylinder transform rotate-45 translate-x-1/2"></div>
+    <!-- Navigation Bar -->
+    <nav class="p-6 flex justify-end z-10">
+        <div class="flex space-x-6">
+            <a href="CodingWindow.html" class="text-white hover:text-gray-300 transition-colors duration-200">Home</a>
+            <a href="Get started-1.html" class="text-white hover:text-gray-300 transition-colors duration-200">Get Started</a>
+            <a href="Sign in-1.html" class="text-white hover:text-gray-300 transition-colors duration-200">Sign In</a>
+            <a href="Signup.html" class="text-white hover:text-gray-300 transition-colors duration-200">Sign Up</a>
+            <a href="loginthroughsocial.html" class="text-white hover:text-gray-300 transition-colors duration-200">Social Login</a>
+        </div>
+    </nav>
     <!-- Login Through Social Account Form Container -->
     <div class="container">
   <form action="/action_page.php">
@@ -221,4 +231,5 @@ input[type=submit]:hover {
 
 </style>
 </body>
+
 </html>
