--- a/Sign in-1.html
+++ b/Sign in-1.html
@@ -51,6 +51,16 @@
 
     <div class="absolute top-1/3 left-0 w-80 h-16 shape-cylinder transform -rotate-45 -translate-x-1/2"></div>
     <div class="absolute bottom-1/3 right-0 w-60 h-12 shape-cylinder transform rotate-45 translate-x-1/2"></div>
+    <!-- Navigation Bar -->
+    <nav class="p-6 flex justify-end z-10">
+        <div class="flex space-x-6">
+            <a href="CodingWindow.html" class="text-white hover:text-gray-300 transition-colors duration-200">Home</a>
+            <a href="Get started-1.html" class="text-white hover:text-gray-300 transition-colors duration-200">Get Started</a>
+            <a href="Sign in-1.html" class="text-white hover:text-gray-300 transition-colors duration-200">Sign In</a>
+            <a href="Signup.html" class="text-white hover:text-gray-300 transition-colors duration-200">Sign Up</a>
+            <a href="loginthroughsocial.html" class="text-white hover:text-gray-300 transition-colors duration-200">Social Login</a>
+        </div>
+    </nav>
 
     <!-- Sign Up Form Container -->
     <div class="bg-white bg-opacity-10 p-8 rounded-xl shadow-lg max-w-md w-full mx-4 relative z-10 backdrop-filter backdrop-blur-sm border border-opacity-20 border-white">
@@ -127,3 +137,4 @@
     </script>
 </body>
 </html>
+
