--- a/Signup.html
+++ b/Signup.html
@@ -88,6 +88,8 @@
         </form>
         <p class="text-center text-sm mt-4">
             Already have an account? <a href="Sign in-1.html" class="text-white hover:underline font-medium">Sign In</a>
+             <a href="loginthroughsocial.html" class="text-white hover:underline font-medium block mt-2">Login Here</a>
+            <a href="https://account.google.com" class="text-white hover:underline font-medium block mt-2">Google Sign In</a>
         </p>
     </div>
 
@@ -137,3 +139,4 @@
 </body>
 
 </html>        
+
