--- a/loginthroughsocial.html
+++ b/loginthroughsocial.html
@@ -6,6 +6,7 @@
     <title>Login Through Social Account - Coding Websites</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-pap6Y6YbF+e6UuQmY1X+6v0gZQFQm2k9x+eQOQk1r3p8T8ZVn2X1kqjvU5wqX1Yd3mXG1k3oZ6s9Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <style>
         /* Internal CSS for the Login Through Social Account Page */
         body {
@@ -45,191 +46,151 @@
 <body class="bg-gradient-custom text-white min-h-screen flex flex-col items-center justify-center relative">
 
     <!-- Abstract Shapes (copied for consistency) -->
+    <!-- Abstract Shapes (copied for consistency) -->
     <div class="absolute top-1/4 left-1/4 w-40 h-40 shape-sphere transform -translate-x-1/2 -translate-y-1/2"></div>
     <div class="absolute top-1/2 right-1/4 w-32 h-32 shape-sphere transform translate-x-1/2 -translate-y-1/2"></div>
     <div class="absolute bottom-1/4 left-1/3 w-20 h-20 shape-sphere transform -translate-x-1/2 translate-y-1/2"></div>
 
     <div class="absolute top-1/3 left-0 w-80 h-16 shape-cylinder transform -rotate-45 -translate-x-1/2"></div>
     <div class="absolute bottom-1/3 right-0 w-60 h-12 shape-cylinder transform rotate-45 translate-x-1/2"></div>
-    <!-- Navigation Bar -->
-    <nav class="p-6 flex justify-end z-10">
-        <div class="flex space-x-6">
-            <a href="CodingWindow.html" class="text-white hover:text-gray-300 transition-colors duration-200">Home</a>
-            <a href="Get started-1.html" class="text-white hover:text-gray-300 transition-colors duration-200">Get Started</a>
-            <a href="Sign in-1.html" class="text-white hover:text-gray-300 transition-colors duration-200">Sign In</a>
-            <a href="Signup.html" class="text-white hover:text-gray-300 transition-colors duration-200">Sign Up</a>
-            <a href="loginthroughsocial.html" class="text-white hover:text-gray-300 transition-colors duration-200">Social Login</a>
-        </div>
+     
+   
+    <!-- Header / Nav links -->
+    <nav class="w-full max-w-3xl mx-auto mb-6 flex gap-4 justify-center z-10 relative">
+        <a href="CodingWindow.html" class="text-white hover:text-gray-300 transition-colors duration-200">Home</a>
+        <a href="Get started-1.html" class="text-white hover:text-gray-300 transition-colors duration-200">Get Started</a>
+        <a href="Sign in-1.html" class="text-white hover:text-gray-300 transition-colors duration-200">Sign In</a>
+        <a href="Signup.html" class="text-white hover:text-gray-300 transition-colors duration-200">Sign Up</a>
+        <a href="loginthroughsocial.html" class="text-white hover:text-gray-300 transition-colors duration-200">Social Login</a>
     </nav>
-    <!-- Login Through Social Account Form Container -->
-    <div class="container">
-  <form action="/action_page.php">
-    <div class="row">
-      <h2 style="text-align:center">Login with Social Media or Manually</h2>
-      <div class="vl">
-        <span class="vl-innertext">or</span>
-      </div>
 
-      <div class="col">
-        <a href="#" class="fb btn">
-          <i class="fa fa-facebook fa-fw"></i> Login with Facebook
-        </a>
-        <a href="#" class="twitter btn">
-          <i class="fa fa-twitter fa-fw"></i> Login with Twitter
-        </a>
-        <a href="#" class="google btn">
-          <i class="fa fa-google fa-fw"></i> Login with Google+
-        </a>
-      </div>
-
-      <div class="col">
-        <div class="hide-md-lg">
-          <p>Or sign in manually:</p>
+    <!-- Form Card -->
+    <div class="form-card w-full max-w-3xl mx-4 p-6 rounded-2xl relative z-10 bg-white/6 backdrop-blur-md border border-white/20">
+      <form action="/action_page.php" class="grid grid-cols-1 md:grid-cols-2 gap-6 items-center">
+        <div class="socials px-4">
+          <h2 class="text-xl md:text-2xl font-semibold text-white mb-4">Login with Social Media</h2>
+          <p class="text-sm text-white/80 mb-4">Use one of your social accounts to quickly sign in.</p>
+          <a href="https://www.facebook.com" class="social-btn fb flex items-center gap-3 justify-center mb-3">
+            <i class="fab fa-facebook-f"></i>
+            <span>Continue with Facebook</span>[po]
+          </a>
+          <a href="https://www.twitter.com" class="social-btn twitter flex items-center gap-3 justify-center mb-3">
+            <i class="fab fa-twitter"></i>
+            <span>Continue with Twitter</span>
+          </a>
+          <a href="https://accounts.google.com" class="social-btn google flex items-center gap-3 justify-center">
+            <i class="fab fa-google"></i>
+            <span>Continue with Google</span>
+          </a>
         </div>
 
-        <input type="text" name="username" placeholder="Username" required>
-        <input type="password" name="password" placeholder="Password" required>
-        <input type="submit" value="Login">
-      </div>
-
+        <div class="manual px-4">
+          <h2 class="text-xl md:text-2xl font-semibold text-white mb-4">Or sign in manually</h2>
+          <div class="space-y-3">
+            <input type="text" name="username" placeholder="Username" required class="input-field">
+            <input type="password" name="password" placeholder="Password" required class="input-field">
+            <input type="submit" value="Login" class="submit-btn">
+          </div>
+          <div class="flex justify-between items-center mt-4 text-sm">
+            <a href="#" class="text-white/80 hover:underline">Sign up</a>
+            <a href="#" class="text-white/80 hover:underline">Forgot password?</a>
+          </div>
+        </div>
+      </form>
     </div>
-  </form>
-</div>
-
-<div class="bottom-container">
-  <div class="row">
-    <div class="col">
-      <a href="#" style="color:rgb(247, 240, 240)" class="btn">Sign up</a>
-    </div>
-    <div class="col">
-      <a href="#" style="color:white" class="btn">Forgot password?</a>
-    </div>
-  </div>
-</div>
 <style>
-    * {box-sizing: border-box}
-
-/* style the container */
-.container {
-  position: relative;
-  border-radius: 5px;
-  background-color: #f2f2f2;
-  padding: 20px 0 30px 0;
-}
-
-/* style inputs and link buttons */
-input,
-.btn {
-  width: 100%;
-  padding: 12px;
-  border: none;
-  border-radius: 4px;
-  margin: 5px 0;
-  opacity: 0.85;
-  display: inline-block;
-  font-size: 17px;
-  line-height: 20px;
-  text-decoration: none; /* remove underline from anchors */
-}
-
-input:hover,
-.btn:hover {
-  opacity: 1;
-}
-
-/* add appropriate colors to fb, twitter and google buttons */
-.fb {
-  background-color: #3B5998;
-  color: white;
-}
-
-.twitter {
-  background-color: #55ACEE;
-  color: white;
-}
-
-.google {
-  background-color: #dd4b39;
-  color: white;
-}
-
-/* style the submit button */
-input[type=submit] {
-  background-color: #04AA6D;
-  color: white;
-  cursor: pointer;
-}
-
-input[type=submit]:hover {
-  background-color: #45a049;
-}
-
-/* Two-column layout */
-.col {
-  float: left;
-  width: 50%;
-  margin: auto;
-  padding: 0 50px;
-  margin-top: 6px;
-}
-
-/* Clear floats after the columns */
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-/* vertical line */
-.vl {
-  position: absolute;
-  left: 50%;
-  transform: translate(-50%);
-  border: 2px solid #ddd;
-  height: 175px;
-}
-
-/* text inside the vertical line */
-.inner {
-  position: absolute;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  background-color: #f1f1f1;
-  border: 1px solid #ccc;
-  border-radius: 50%;
-  padding: 8px 10px;
-}
-
-/* hide some text on medium and large screens */
-.hide-md-lg {
-  display: none;
-}
-
-/* bottom container */
-.bottom-container {
-  text-align: center;
-  background-color: #666;
-  border-radius: 0px 0px 4px 4px;
-}
-
-/* Responsive layout - when the screen is less than 650px wide, make the two columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 650px) {
-  .col {
-    width: 100%;
-    margin-top: 0;
+  :root{
+    --card-bg: rgba(255,255,255,0.06);
+    --muted: rgba(255,255,255,0.8);
+    --glass-border: rgba(255,255,255,0.12);
   }
-  /* hide the vertical line */
-  .vl {
-    display: none;
-  }
-  /* show the hidden text on small screens */
-  .hide-md-lg {
-    display: block;
-    text-align: center;
-  }
-}
+  *{box-sizing:border-box}
 
+  /* Form card tweaks (tailwind covers many layout styles) */
+  .form-card{ /* fallback for older browsers */
+    background: var(--card-bg);
+  }
+
+  /* Social buttons */
+  .social-btn{
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    gap:12px;
+    padding:12px 16px;
+    border-radius:10px;
+    color:white;
+    text-decoration:none;
+    font-weight:600;
+    transition:transform .12s ease, box-shadow .12s ease, opacity .12s ease;
+  }
+  .social-btn i{width:18px;text-align:center}
+  .social-btn:hover{transform:translateY(-3px);box-shadow:0 6px 18px rgba(0,0,0,0.25)}
+  .social-btn.fb{background:#3b5998}
+  .social-btn.twitter{background:#1da1f2}
+  .social-btn.google{background:#db4437}
+
+  /* Input fields */
+  .input-field{
+    width:100%;
+    padding:12px 14px;
+    border-radius:10px;
+    border:1px solid rgba(255,255,255,0.12);
+    background: rgba(255,255,255,0.03);
+    color: white;
+    outline: none;
+    transition: box-shadow .12s ease, border-color .12s ease;
+  }
+  .input-field::placeholder{color: rgba(255,255,255,0.6)}
+  .input-field:focus{box-shadow:0 6px 20px rgba(74, 57, 255, 0.12);border-color: rgba(120,80,255,0.6)}
+
+  .submit-btn{
+    width:100%;
+    padding:12px 14px;
+    border-radius:10px;
+    border:none;
+    background: linear-gradient(90deg,#7c4dff,#5e2be6);
+    color:white;
+    font-weight:700;
+    cursor:pointer;
+    transition:transform .12s ease, opacity .12s ease;
+  }
+  .submit-btn:hover{transform:translateY(-2px);opacity:0.98}
+
+  /* Small adjustments for headings and text */
+  .form-card h2{margin:0 0 6px}
+  .form-card p{margin:0 0 12px}
+
+  /* Responsive: stack columns on small screens */
+  @media (max-width: 768px){
+    .form-card{padding:18px}
+    .socials{order:2}
+    .manual{order:1}
+  }
+
+  /* Keep message box visible styling (unchanged) */
+  .message-box{font-weight:600}
 </style>
-</body>
+<script>
+    // JavaScript to show a message box (example functionality)
+    function showMessage(message) {
+        const messageBox = document.createElement('div');
+        messageBox.className = 'message-box';
+        messageBox.innerText = message;
+        document.body.appendChild(messageBox);
+        messageBox.style.display = 'block';
+        setTimeout(() => {
+            messageBox.style.display = 'none';
+            document.body.removeChild(messageBox);
+        }, 3000);
+    }
+     // In a real application, you would send these credentials to a server for user registration.
+            // For this example, we'll just simulate a successful sign-up.
+            showMessage('Signed up successfully! (Simulated)');
+            console.log('Attempted sign up with:', { username, email, password });
+            // Redirect or perform other actions after successful sign-up
 
+    // Example usage: showMessage('This is a test message!');
+</script>
+</body>
 </html>
