--- a/loginthroughsocial.html
+++ b/loginthroughsocial.html
@@ -57,7 +57,7 @@
    
     <!-- Header / Nav links -->
     <nav class="w-full max-w-3xl mx-auto mb-6 flex gap-4 justify-center z-10 relative">
-        <a href="CodingWindow.html" class="text-white hover:text-gray-300 transition-colors duration-200">Home</a>
+        <a href="index.html" class="text-white hover:text-gray-300 transition-colors duration-200">Home</a>
         <a href="Get started-1.html" class="text-white hover:text-gray-300 transition-colors duration-200">Get Started</a>
         <a href="Sign in-1.html" class="text-white hover:text-gray-300 transition-colors duration-200">Sign In</a>
         <a href="Signup.html" class="text-white hover:text-gray-300 transition-colors duration-200">Sign Up</a>
@@ -194,3 +194,4 @@
 </script>
 </body>
 </html>
+
